--- a/serverless-cf-template.yml
+++ b/serverless-cf-template.yml
@@ -62,6 +62,12 @@ Parameters:
     MaxValue: 180
     MinValue: 1
     Description: "min 1s up to 3 minutes (180s)."
+  LambdaMemSize:
+    Type: Number
+    Default: 128
+    MaxValue: 10240
+    MinValue: 128
+    Description: "Default is 128MB"
 
 Metadata:
   TemplateInfo:
@@ -72,6 +78,9 @@ Metadata:
   Functions:
     Description: |
       Lambda functions... 
+
+      Specifications:
+        1. Can only use zip file upload
   Databases:
     Description: "This stack uses DynamoDB as main database."
 
@@ -91,7 +100,6 @@ Conditions:
     CreateExternalAccess: !Equals
     - !Ref ExternalCicd
     - true
-
 
 # Resources. Please replace parameters above as much as possible.
 Resources:
@@ -146,7 +154,7 @@ Resources:
           - Sid: CustomPolicyAll
             Effect: Allow
             Action:
-            - apigateway:*
+            # - apigateway:*
             - s3:*
             - logs:*
             - lambda:*
@@ -214,21 +222,104 @@ Resources:
       #   WorkingDirectory: "String"
       # KmsKeyArn: "String"
       # Layers:
-      MemorySize: Number # Default is 128
+      MemorySize: !Ref LambdaMemSize
       PackageType: "Zip"
       ReservedConcurrentExecutions: 0
       Role: !GetAtt CFNLAMBDAROLE.Arn
-      Runtime: "nodejs16.x"
+      Runtime: !Ref LambdaNodeJsRuntime
+      Tags:
+      - Key: ENV
+        Value: !Sub Environment
+      Timeout: Number
+      # TODO TracingConfig:
+      #   Mode: "String"
+      #[ ] inDev VpcConfig:
+      #   SecurityGroupIds:
+      #     -
+      #   SubnetIds:
+      #     -
+
+  LAMBDAS3CODEREPO:
+    Type: AWS::S3::Bucket
+    Properties:
+      BucketName: !Sub "coderepo-${ProjectName}-${Environment}"
+      CorsConfiguration:
+        CorsRules:
+          -
+      IntelligentTieringConfigurations:
+        IntelligentTieringConfigurations
+      InventoryConfigurations:
+        InventoryConfigurations
+      LifecycleConfiguration:
+        Rules:
+          -
+      LoggingConfiguration:
+        DestinationBucketName: "String"
+        LogFilePrefix: "String"
+      MetricsConfigurations:
+        MetricsConfigurations
+      NotificationConfiguration:
+        LambdaConfigurations:
+          -
+        QueueConfigurations:
+          -
+        TopicConfigurations:
+          -
+      ObjectLockConfiguration:
+        ObjectLockEnabled: "String"
+      ObjectLockEnabled: false
+      OwnershipControls:
+        Rules:
+          -
+      PublicAccessBlockConfiguration:
+        BlockPublicAcls: false
+        BlockPublicPolicy: false
+        IgnorePublicAcls: false
+        RestrictPublicBuckets: false
+      ReplicationConfiguration:
+        Role: "false"
+        Rules:
+          -
       Tags:
         Tags
-      Timeout: Number
-      TracingConfig:
-        Mode: "String"
-      VpcConfig:
-        SecurityGroupIds:
+      VersioningConfiguration:
+        Status: "false"
+      WebsiteConfiguration:
+        ErrorDocument: "String"
+        IndexDocument: "String"
+        RoutingRules:
           -
-        SubnetIds:
+
+
+  # If prod, create stg and dev aliases. if dev, create dev and stg
+  
+
+
+  CFNLAMBDAVERSION:
+    Type: AWS::Lambda::Version
+    Properties:
+      CodeSha256: "String"
+      Description: "String"
+      FunctionName: "String" # Required
+      ProvisionedConcurrencyConfig:
+        ProvisionedConcurrentExecutions: Number
+
+
+
+  CFNLAMBDAALIAS:
+    Type: AWS::Lambda::Alias
+    Properties:
+      Description: "Create aliases for the functions. Creates dev, stg, prod on 'prod' env"
+      FunctionName: "String" # Required
+      FunctionVersion: "String" # Required
+      Name: "String" # Required
+      ProvisionedConcurrencyConfig:
+        ProvisionedConcurrentExecutions: Number
+      RoutingConfig:
+        AdditionalVersionWeights:
           -
+
+
 Transform:
     
 Outputs:
